# src-check

./: .coveragerc  .gitignore  .hatchignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  TESTPYPI_PUBLISH_GUIDE.md  auto_git_commit.py  benchmark_results.json  development-cycle.md  next-steps.md  pyproject.toml  pytest.ini  requirements-specification.md  security-checklist.md  security-migration-plan.md
.claude/: backup.json
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  benchmark.py  profile.py
docs/: ci-cd-integration.md
docs/checkers/: ArchitectureChecker.md  CodeQualityChecker.md  DependencyChecker.md  DeprecationChecker.md  DocumentationChecker.md  LicenseChecker.md  PerformanceChecker.md  SecurityChecker.md  TestQualityChecker.md  TypeHintChecker.md
reports/: progress_20250702_185556.md  progress_20250702_234248.md
scripts/: cleanup_venv.sh  create_github_release.sh  progress_report.py  publish_pypi.sh  publish_testpypi.sh  quick_publish.sh  show_metrics.py  test_install.sh
src/src_check/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_analysis.py
tests/unit/: test_checkers.py  test_cli.py  test_cli_import.py  test_cli_simple.py  test_context_analyzer.py  test_context_rules.py  test_core_modules.py  test_core_simple.py  test_coverage_improvement.py  test_dependency_checker.py  test_deprecation_checker.py  test_documentation_checker.py  test_formatters.py  test_formatters_simple.py  test_license_checker.py  test_models.py  test_performance_checker.py  test_type_hint_checker.py
計画/: 202507021447_計画_CLI統合完成とプラグインシステム実装.md  202507021509_修正依頼_コード品質問題.md  202507021532_修正依頼_コード品質チェック結果.md  202507021721_修正依頼_コード品質チェック結果.md  202507021840_修正依頼_コード品質チェック結果.md  202507021854_計画_v0.2.0リリース準備とドキュメント整備.md  202507022212_計画_v0.2.0リリース作業.md  202507022240_計画_v0.2.0正式リリース作業.md  202507022257_修正依頼_コード品質チェック結果.md  202507022328_修正依頼_コード品質チェック結果.md  202507022340_計画_PyPIテストサーバー公開.md  202507030000_計画_PyPIテストサーバー公開準備.md  202507030043_計画_TestPyPI公開とテスト修正.md  202507030335_計画_mypyエラーとテスト失敗の修正.md  202507030410_状況報告_TestPyPI公開準備.md  202507030431_計画_TestPyPI公開とv0.2.0正式リリース.md  202507030449_修正依頼_コード品質チェック結果.md  202507030500_状況報告_v0.2.0リリース準備完了.md  202507030504_計画_TestPyPI公開実行とv0.2.0正式リリース.md  202507030540_状況報告_TestPyPI公開準備完了.md  202507031720_計画_v0.2.0リリースとv0.3.0開発準備.md  202507041330_修正依頼_コード品質問題.md  202507041424_修正依頼_コード品質改善.md  202507041424_計画_PyPI正式公開とv0.2.0リリース完了.md  202507041526_計画_PyPI正式公開とv0.3.0機能統合.md  202507041713_修正依頼_コード品質問題.md  ROADMAP.md  ROADMAP_0000.md  ROADMAP_0001.md
計画/old/: ROADMAP.md  ROADMAP_0000.md
計画/結果/: 202507021509_計画_CLIバグ修正と追加チェッカー実装.md  202507021532_計画_コード品質改善と自動修正.md  202507021551_修正依頼_コード品質問題.md  202507021551_計画_コード品質最終調整と追加チェッカー実装.md  202507021619_修正依頼_コード品質チェック結果.md  202507021619_計画_mypyエラー修正とコード品質改善.md  202507021702_修正依頼_コード品質チェック結果.md  202507021702_計画_PerformanceChecker実装.md  202507021721_計画_DependencyChecker実装.md  202507021741_完了_LicenseChecker実装結果.md  202507021741_計画_LicenseChecker実装.md  202507021801_修正依頼_コード品質チェック結果.md  202507021802_修正依頼_コード品質チェック結果.md  202507021802_計画_LicenseChecker修正とテスト合格.md  202507021819_計画_DeprecationChecker実装.md  202507021839_修正依頼_コード品質チェック結果.md  202507021840_計画_ドキュメント整備とv0.2.0完成.md  202507021850_完了_DependencyChecker実装結果.md  202507021850_完了_LicenseChecker実装結果.md  (+49 more)
(+33 files in other folders)
